--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.16",
-    "daisyui": "^3.9.2",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
     "next": "13.5.4",
@@ -18,5 +17,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "daisyui": "^3.9.2"
   }
 }
