--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.0",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.4",
     "next": "13.5.4",
