--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.0.18",
     "@stripe/react-stripe-js": "^2.3.1",
     "@stripe/stripe-js": "^2.1.11",
+    "@tanstack/react-query": "^5.8.3",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.1",
     "eslint": "8.50.0",
@@ -24,6 +25,8 @@
     "tailwindcss": "3.3.3"
   },
   "devDependencies": {
+    "@types/node": "20.9.0",
+    "@types/react": "18.2.37",
     "daisyui": "^3.9.2"
   }
 }
